--- a/core/java/algorithm/pom.xml
+++ b/core/java/algorithm/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>scrypt</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
 
     </dependencies>
 
